[package]
name = "tolak"
version = "0.1.0"
description = "Node of tolak"
authors = ["Wenfeng Wang <https://github.com/tolak>"]
homepage = "https://github.com/tolak"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/tolk/happy-tolak.git"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "tolak"

[dependencies]
structopt = "0.3.25"

sc-cli = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sp-core = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sc-executor = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sc-service = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sc-telemetry = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sc-keystore = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool-api = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sc-consensus-aura = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sp-consensus-aura = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sp-consensus = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sc-consensus = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sc-finality-grandpa = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sp-finality-grandpa = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sc-client-api = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sp-timestamp = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }

# These dependencies are used for the RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sp-api = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sc-rpc-api = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sp-blockchain = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
sc-basic-authorship = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
substrate-frame-rpc-system = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }
frame-benchmarking-cli = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }

# Local Dependencies
tolak-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }

[features]
default = []
runtime-benchmarks = [
	"tolak-runtime/runtime-benchmarks",
]
