[package]
name = "tolak-runtime"
version = "0.1.0"
description = "Runtime of tolak."
authors = ["Wenfeng Wang <https://github.com/tolak>"]
homepage = "https://github.com/tolak"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/tolak/happy-tolak.git"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

pallet-aura = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-balances = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-support = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-grandpa = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-randomness-collective-flip = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-sudo = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-timestamp = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-executive = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-api = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = {  branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git"}
sp-consensus-aura = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-core = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-inherents = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git"}
sp-offchain = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-session = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-std = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-version = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }

# Used for the RPCs
frame-system-rpc-runtime-api = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc-runtime-api = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git" }

# Used for runtime benchmarking
frame-benchmarking = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true }
frame-system-benchmarking = { branch = "polkadot-v0.9.15", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true }
hex-literal = { version = "0.3.4", optional = true }

# Local Dependencies

[build-dependencies]
substrate-wasm-builder = { branch = "polkadot-v0.9.15", git = "https://github.com/paritytech/substrate.git" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
