[package]
name = "ocw"
version = "0.1.0"
authors = ["Wenfeng Wang <kalot.wang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true, features = ["derive"] }

sp-std = { version = "2.0.0", default-features = false, path = "../../substrate/primitives/std" }
sp-runtime = { version = "2.0.0", default-features = false, path = "../../substrate/primitives/runtime" }

frame-support = { version = "2.0.0", default-features = false, path = "../../substrate/frame/support" }
frame-system = { version = "2.0.0", default-features = false, path = "../../substrate/frame/system" }


[features]
default = ['std']
std = [
    'codec/std',
    'serde',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
]
